# capacitacao-avancada

./: README.md  pyproject.toml
aeroespacial-2/: README.md  pyproject.toml
aeroespacial-2/conf/: logging.yml
aeroespacial-2/docs/source/: conf.py  index.rst
aeroespacial-2/src/aeroespacial_2/: __init__.py  __main__.py  settings.py
