[project]
name = "capacitacao-avancada"
version = "0.1.0"
description = ""
authors = [
    {name = "Renato",email = "renato.costa87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kedro (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
